--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ axum = "0.7.1"
 color-eyre = "0.6.2"
 config = "0.13.4"
 derive_builder = "0.12.0"
+octocrab = "0.32.0"
 regex = "1.10.2"
 serde = { version = "1.0.193", features = ["derive"] }
 thiserror = "1.0.50"
