--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,8 @@ regex = "1.10.2"
 serde = { version = "1.0.193", features = ["derive"] }
 thiserror = "1.0.50"
 tokio = { version = "1.34.0", features = ["full"] }
+tracing = "0.1.40"
+tracing-subscriber = "0.3.18"
 
 [dev-dependencies]
 serde_json = "1.0.108"
