--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ derive_builder = "0.12.0"
 octocrab = "0.32.0"
 regex = "1.10.2"
 serde = { version = "1.0.193", features = ["derive"] }
+serde_json = "1.0.108"
 thiserror = "1.0.50"
 tokio = { version = "1.34.0", features = ["full"] }
 tracing = "0.1.40"
